Frontend integration with backend

--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -5,7 +5,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 8rem;
+    height: 4rem;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
     p {
       color: #fff;
     }
